; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/security/integrity/ima/extr_ima_fs.c_ima_release_policy.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/security/integrity/ima/extr_ima_fs.c_ima_release_policy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.file = type { i32 }

@valid_policy = common dso_local global i32 0, align 4
@policy_opencount = common dso_local global i32 0, align 4
@ima_policy = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inode*, %struct.file*)* @ima_release_policy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ima_release_policy(%struct.inode* %0, %struct.file* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.inode*, align 8
  %5 = alloca %struct.file*, align 8
  store %struct.inode* %0, %struct.inode** %4, align 8
  store %struct.file* %1, %struct.file** %5, align 8
  %6 = load i32, i32* @valid_policy, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %11, label %8

8:                                                ; preds = %2
  %9 = call i32 (...) @ima_delete_rules()
  store i32 1, i32* @valid_policy, align 4
  %10 = call i32 @atomic_set(i32* @policy_opencount, i32 1)
  store i32 0, i32* %3, align 4
  br label %15

11:                                               ; preds = %2
  %12 = call i32 (...) @ima_update_policy()
  %13 = load i32*, i32** @ima_policy, align 8
  %14 = call i32 @securityfs_remove(i32* %13)
  store i32* null, i32** @ima_policy, align 8
  store i32 0, i32* %3, align 4
  br label %15

15:                                               ; preds = %11, %8
  %16 = load i32, i32* %3, align 4
  ret i32 %16
}

declare dso_local i32 @ima_delete_rules(...) #1

declare dso_local i32 @atomic_set(i32*, i32) #1

declare dso_local i32 @ima_update_policy(...) #1

declare dso_local i32 @securityfs_remove(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
